# cReverb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
Resources/: layout.xml
Source/: ReverbProcessor.cpp  ReverbProcessor.h
